--- a/src/app/components/headsetCard/headsetCard.scss
+++ b/src/app/components/headsetCard/headsetCard.scss
@@ -1,4 +1,13 @@
 .App {
+  &.dark {
+    .ant-card {
+      &.selected, &:hover {
+        box-shadow: 0 1px 2px -2px rgba(48, 48, 48, 0.32),
+          0 3px 6px 0 rgba(48, 48, 48, 0.24), 0 5px 12px 4px rgba(48, 48, 48, 0.18);
+        border: 1px solid #303030;
+      }
+    }
+  }
   .ant-card {
     text-align: center;
     &.selected {
