--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,9 @@
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
+
+$light-main: #001529;
+$light-main-hover: #1890ff;
+
+$dark-main: #1f1f1f;
+$dark-main-hover: #3A3C41;
